--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project>
    <modelVersion>4.0.0</modelVersion>
    <groupId>root</groupId>
-   <version>1.0</version>
+   <version>1.0.1-SNAPSHOT</version>
    <artifactId>project</artifactId>
    <packaging>pom</packaging>
    <name>project</name>
@@ -36,23 +36,23 @@
          <dependency>
             <groupId>root.project.projects</groupId>
             <artifactId>logging</artifactId>
-            <version>1.0</version>
+            <version>1.0.1-SNAPSHOT</version>
          </dependency>
          <dependency>
             <groupId>root.project</groupId>
             <artifactId>primary-source</artifactId>
-            <version>1.0</version>
+            <version>1.0.1-SNAPSHOT</version>
          </dependency>
          <dependency>
             <groupId>root.project.servlets</groupId>
             <artifactId>servlet</artifactId>
-            <version>1.0</version>
+            <version>1.0.1-SNAPSHOT</version>
             <type>war</type>
          </dependency>
          <dependency>
             <groupId>root.project</groupId>
             <artifactId>ejbs</artifactId>
-            <version>1.0</version>
+            <version>1.0.1-SNAPSHOT</version>
             <type>ejb</type>
          </dependency>
       </dependencies>
