--- a/projects/logging/pom.xml
+++ b/projects/logging/pom.xml
@@ -7,6 +7,6 @@
    <parent>
       <groupId>root.project</groupId>
       <artifactId>projects</artifactId>
-      <version>1.0</version>
+      <version>1.0.1-SNAPSHOT</version>
    </parent>
 </project>
