--- a/projects/pom.xml
+++ b/projects/pom.xml
@@ -1,14 +1,14 @@
 <project>
    <modelVersion>4.0.0</modelVersion>
    <groupId>root.project</groupId>
-   <version>1.0</version>
+   <version>1.0.1-SNAPSHOT</version>
    <artifactId>projects</artifactId>
    <packaging>pom</packaging>
    <name>sub projects</name>
    <parent>
       <groupId>root</groupId>
       <artifactId>project</artifactId>
-      <version>1.0</version>
+      <version>1.0.1-SNAPSHOT</version>
    </parent>
    <modules>
       <module>logging</module>
