--- a/servlets/servlet/pom.xml
+++ b/servlets/servlet/pom.xml
@@ -7,7 +7,7 @@
    <parent>
       <groupId>root.project</groupId>
       <artifactId>servlets</artifactId>
-      <version>1.0</version>
+      <version>1.0.1-SNAPSHOT</version>
    </parent>
    <dependencies>
       <dependency>
