--- a/primary-source/pom.xml
+++ b/primary-source/pom.xml
@@ -7,7 +7,7 @@
    <parent>
       <groupId>root</groupId>
       <artifactId>project</artifactId>
-      <version>1.0.1</version>
+      <version>1.0.2-SNAPSHOT</version>
    </parent>
    <dependencies>
       <dependency>
